feat: update healthcheck configuration and environment variables in docker-compose

--- a/docker-compose.frontend.yml
+++ b/docker-compose.frontend.yml
@@ -10,15 +10,16 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
+      - HOSTNAME=0.0.0.0
       - NEXT_PUBLIC_VOXDEM_API_URL=${NEXT_PUBLIC_VOXDEM_API_URL:-http://localhost:3001/api}
     networks:
       - voxdem-network
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000", "||", "exit", "1"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://0.0.0.0:3000", "||", "exit", "1"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 60s
 
 networks:
   voxdem-network:
