--- a/docker-compose.frontend.yml
+++ b/docker-compose.frontend.yml
@@ -11,7 +11,7 @@ services:
       - NODE_ENV=production
       - PORT=3000
       - HOSTNAME=0.0.0.0
-      - NEXT_PUBLIC_VOXDEM_API_URL=${NEXT_PUBLIC_VOXDEM_API_URL:-http://localhost:3001/api}
+      - NEXT_PUBLIC_VOXDEM_API_URL=${NEXT_PUBLIC_VOXDEM_API_URL:-https://demovoxdem.com.br/api}
     networks:
       - voxdem-network
     healthcheck:
