feat: update API URL in deployment script to remove port specification

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -47,10 +47,9 @@ jobs:
             docker load < voxdem-frontend.tar && \
             SERVER_IP=\$(hostname -I | awk '{print \$1}') && \
             echo '# Configurações de produção do VoxDem Frontend com subpath' > .env && \
-            echo \"NEXT_PUBLIC_VOXDEM_API_URL=http://\${SERVER_IP}:3001/api\" >> .env && \
+            echo \"NEXT_PUBLIC_VOXDEM_API_URL=http://\${SERVER_IP}/api\" >> .env && \
             echo 'NODE_ENV=production' >> .env && \
-            echo 'PORT=3000' >> .env && \
-            echo 'NEXT_PUBLIC_BASE_PATH=/voxdem' >> .env && \
+            echo 'PORT=3000' >> .env && \            
             echo \"# Deploy em \$(date)\" >> .env && \
             echo 'DEPLOY_VERSION=latest' >> .env && \
             echo '✅ Arquivo .env criado:' && cat .env && \
@@ -62,7 +61,7 @@ jobs:
             echo '✅ Deploy do VoxDem Frontend concluído!' && \
             echo \"📍 VoxDem Frontend disponível em: http://\${SERVER_IP}:3002/voxdem\" && \
             echo \"📍 Via Nginx (configurar): http://\${SERVER_IP}/voxdem\" && \
-            echo \"🔗 Backend configurado em: http://\${SERVER_IP}:3001/api\""
+            echo \"🔗 Backend configurado em: http://\${SERVER_IP}/api\""
 
       - name: 🔍 Health Check Frontend
         run: |
