feat: update API URL in deployment script to use secure HTTPS endpoint

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -47,7 +47,7 @@ jobs:
             docker load < voxdem-frontend.tar && \
             SERVER_IP=\$(hostname -I | awk '{print \$1}') && \
             echo '# Configurações de produção do VoxDem Frontend com subpath' > .env && \
-            echo \"NEXT_PUBLIC_VOXDEM_API_URL=http://\${SERVER_IP}/api\" >> .env && \
+            echo \"NEXT_PUBLIC_VOXDEM_API_URL=https://\demovoxdem.com.br/api\" >> .env && \
             echo 'NODE_ENV=production' >> .env && \
             echo 'PORT=3000' >> .env && \            
             echo \"# Deploy em \$(date)\" >> .env && \
